src/test/deca/avecObjet/valid/call_method_two_params copy.deca
// Description :
//    Appel d'une méthode avec deux paramètres.
//
// Resultats :
//    OK

class A {
    void m(int x, float y) {
        println(x);
        println(y);
    }
}

{
    A a = new A();
    a.m(1, 2.5);
}

